tests/NormalTests/paczka2/big_fuzzy/50878826.err
Error in line 2: A139 A139 74,1
Error in line 4: y2FW A139 60,0
Error in line 7: y2FW A198 53,8
Error in line 8: FXCgmlQNHB S452 16,0
Error in line 12: FXCgmlQNHB A139 25,9
Error in line 20: K3Kn A198 53,8
Error in line 22: JQiI A198 4,95
Error in line 24: A139 A139 -2,4
Error in line 23: A139 A139 78,4
Error in line 33: ou4 A1*8 68,2
Error in line 36: JQiI A110 0,8
Error in line 34: y2FW A198 14,3
Error in line 55: OsAUrFP7bJ A1B8 37,1
Error in line 27: ou4 A139 57,0
Error in line 51: FXCgmlQNHB A139 15,3
Error in line 62: FXCgmlQNHB A198 21,2
Error in line 63: FXCgmlQNHB S452 70,5
Error in line 45: K3Kn A110 111,9
Error in line 54: y2FW A198 45,1
Error in line 69: K3Kn A139 40,5
Error in line 76: K3Kn S452 41,2
Error in line 84: A139 A110 13,7
Error in line 58: OsAUrFP7bJ A198 87,6
Error in line 102: y2FW A139 7,1
Error in line 111: ou4 Aa39 320,2
Error in line 106: ou4 A139 95,0
Error in line 115: A139 A139 98,7
Error in line 103: y2FW A198 31,5
Error in line 120: y2FW A110 93,4
Error in line 117: K3Kn A110 36,7
Error in line 121: y2FW A198 70,4
Error in line 122: K3Kn A139 59,1
Error in line 124: A139 A198 25,1
Error in line 127: y2FW A110 65,7
Error in line 158: JQiI S452 30,4
Error in line 175: y2FW A110 20,8
Error in line 176: y2FW A198 87,6
Error in line 189: JQiI A110 92,6
Error in line 186: OsAUrFP7bJ A110 40,5
Error in line 200: OsAUrFP7bJ A139 0,4
Error in line 202: FXCgmlQNHB A198 24,6
Error in line 216: JQiI S452 61,41
Error in line 220: JQiI S452 87,24
Error in line 217: ou4 A198 20,8
Error in line 222: OsAUrFP7bJ A198 44,1
Error in line 223: K3Kn A110 78,8
Error in line 239: FXCgmlQNHB G452 16,7
Error in line 241: FXCgmlQNHB S452 7,00
Error in line 245: OsAUrFP7bJ A139 9,5
